db properties move to zk config

--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: user
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/DEMO_USER?useUnicode=true&characterEncoding=utf8&useSSL=false&statementInterceptors=brave.mysql.TracingStatementInterceptor
-    username: jing
-    password: Jing1234!@#$
+    url: jdbc:mysql://${db.host:db}:${db.port:3306}/${db.schema}?useUnicode=true&characterEncoding=utf8&useSSL=false&statementInterceptors=brave.mysql.TracingStatementInterceptor
+    username: ${db.username:root}
+    password: ${db.password:root}
 
 jrpc:
   server:
