--- a/account-common/pom.xml
+++ b/account-common/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>account-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jingshouyan</groupId>
+            <artifactId>j-jdbc-common</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
