--- a/account/pom.xml
+++ b/account/pom.xml
@@ -10,10 +10,46 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>account</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>account-common</module>
-    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.jingshouyan</groupId>
+            <artifactId>j-rpc-server-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jingshouyan</groupId>
+            <artifactId>j-rpc-trace-zipkin-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jingshouyan</groupId>
+            <artifactId>j-rpc-hmily-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jingshouyan</groupId>
+            <artifactId>j-jdbc-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.demo.jingshouyan</groupId>
+            <artifactId>account-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.brave</groupId>
+            <artifactId>brave-instrumentation-mysql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
